auth-istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: backend
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: auth
        protocol: HTTP
      hosts:
        - "*"
