auth-istio/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
  namespace: backend
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/auth"
        - uri:
            prefix: "/user"
      route:
        - destination:
            host: auth.backend.svc.cluster.local
            port:
              number: 8080
